# FRANK

./: README.md  main.py  pyproject.toml
app/: __init__.py  keepalive.py  views.py
app/static/: script.js  style.css
app/templates/: 404.html  adddiscordusername.html  addlink.html  allthreads.html  changedesc.html  changepass.html  deleteaccount.html  deletemail.html  deletethread.html  index.html  likethread.html  login.html  main.html  makethread.html  sendmail.html  signup.html  thread.html  unlikethread.html  user.html
emailbasics/: emailbasics.py
